# mag7-return-viewer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  wrangler.jsonc
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py  models.py  static.py
backend/app/api/: compare.py  portfolio.py  returns.py
backend/app/services/: analytics.py  cache.py  prices.py  returns.py
backend/tests/: conftest.py  test_analytics.py  test_api.py  test_cache.py  test_compare_api.py  test_portfolio_api.py  test_returns_logic.py
docs/: seo.md
frontend/: .env.example  .env.production  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
frontend/public/: _headers  _redirects
frontend/scripts/: generate-seo-pages.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts  types.ts  vite-env.d.ts
frontend/src/api/: client.ts  compare.ts  portfolio.ts  returns.ts
frontend/src/components/: AnnualReturns.tsx  BenchmarkMetricsPanel.tsx  CommandPalette.tsx  CompareResults.tsx  ComparisonTable.tsx  CorrelationHeatmap.tsx  DateRangePicker.tsx  ErrorState.tsx  GrowthChart.tsx  HoldingsTable.tsx  LoadingState.tsx  PortfolioBuilder.tsx  PortfolioResults.tsx  ReturnsGrid.tsx  Reveal.tsx  RollingCharts.tsx  SummaryTable.tsx  TickerCard.tsx  TickerInput.tsx  TickerSelect.tsx  WindowCaption.tsx
frontend/src/hooks/: useComparison.ts  useDocumentMeta.ts  usePortfolio.ts  usePrefersReducedMotion.ts  (+2 more)
frontend/tests/: setup.ts  test-utils.tsx
(+33 files in other folders)
