[project]
name = "acadian-mag7-backend"
version = "0.1.0"
description = "MAG7 returns API for Acadian take-home"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "yfinance>=0.2.50",
    "pandas>=2.2.0",
    "pydantic>=2.9.0",
    "cachetools>=5.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",  # for FastAPI TestClient
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RET"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true  # yfinance has no types

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]